--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -30,7 +30,8 @@ builds:
 archives:
   - name_template: >-
       {{ .ProjectName }}_
-      {{- title .Os }}_
+      {{ .Tag }}_
+      {{ .Os }}_
       {{- if eq .Arch "amd64" }}amd64
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
