Fix false positives on pods with network policies
fixes #311

--- a/internal/lint/testdata/core/sa/2.yaml
+++ b/internal/lint/testdata/core/sa/2.yaml
@@ -13,3 +13,9 @@ items:
       name: sa2
       namespace: ns2
     automountServiceAccountToken: false
+  - apiVersion: v1
+    kind: ServiceAccount
+    metadata:
+      name: sa3
+      namespace: ns3
+    automountServiceAccountToken: false
