--- a/internal/lint/testdata/core/pod/3.yaml
+++ b/internal/lint/testdata/core/pod/3.yaml
@@ -1,7 +1,8 @@
 ---
 apiVersion: v1
-kind: List
+kind: PodList
 items:
+
 - apiVersion: v1
   kind: Pod
   metadata:
@@ -62,6 +63,7 @@ items:
     phase: Running
     podIPs:
     - ip: 172.1.0.3
+
 - apiVersion: v1
   kind: Pod
   metadata:
