--- a/internal/lint/testdata/net/np/1.yaml
+++ b/internal/lint/testdata/net/np/1.yaml
@@ -1,6 +1,7 @@
-apiVersion: v1
-kind: List
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicyList
 items:
+
 - apiVersion: networking.k8s.io/v1
   kind: NetworkPolicy
   metadata:
@@ -35,12 +36,14 @@ items:
       ports:
       - protocol: TCP
         port: 5978
+
 - apiVersion: networking.k8s.io/v1
   kind: NetworkPolicy
   metadata:
     name: np2
     namespace: default
   spec:
+    podSelector: {}
     ingress:
     - from:
       - ipBlock:
@@ -66,6 +69,7 @@ items:
       ports:
       - protocol: TCP
         port: 5978
+
 - apiVersion: networking.k8s.io/v1
   kind: NetworkPolicy
   metadata:
