--- a/internal/lint/testdata/net/np/2.yaml
+++ b/internal/lint/testdata/net/np/2.yaml
@@ -1,6 +1,7 @@
-apiVersion: v1
-kind: List
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicyList
 items:
+
 - apiVersion: networking.k8s.io/v1
   kind: NetworkPolicy
   metadata:
@@ -29,6 +30,7 @@ items:
     podSelector: {}
     policyTypes:
     - Egress
+
 - apiVersion: networking.k8s.io/v1
   kind: NetworkPolicy
   metadata:
@@ -54,6 +56,7 @@ items:
     - {}
     policyTypes:
     - Ingress
+
 - apiVersion: networking.k8s.io/v1
   kind: NetworkPolicy
   metadata:
@@ -82,6 +85,7 @@ items:
     policyTypes:
     - Ingress
     - Egress
+
 - apiVersion: networking.k8s.io/v1
   kind: NetworkPolicy
   metadata:
