--- a/internal/lint/testdata/net/np/3.yaml
+++ b/internal/lint/testdata/net/np/3.yaml
@@ -1,6 +1,7 @@
-apiVersion: v1
-kind: List
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicyList
 items:
+
 - apiVersion: networking.k8s.io/v1
   kind: NetworkPolicy
   metadata:
@@ -10,15 +11,14 @@ items:
     podSelector: {}
     policyTypes:
     - Ingress
+
 - apiVersion: networking.k8s.io/v1
   kind: NetworkPolicy
   metadata:
     name: allow-all-egress
     namespace: ns2
   spec:
-    # podSelector:
-    # matchLabels:
-    #   app: p2
+    podSelector: {}
     ingress:
     - from:
         - namespaceSelector:
