--- a/internal/cilium/lint/testdata/cep/1.yaml
+++ b/internal/cilium/lint/testdata/cep/1.yaml
@@ -26,7 +26,7 @@ items:
       - k8s:io.cilium.k8s.policy.cluster=fred
       - k8s:io.cilium.k8s.policy.serviceaccount=sa1
       - k8s:io.kubernetes.pod.namespace=default
-      - k8s:app=p1
+      - k8s:k8s-app=cep1
     named-ports:
     - name: dns
       port: 53
@@ -69,7 +69,7 @@ items:
       - k8s:io.cilium.k8s.policy.cluster=fred
       - k8s:io.cilium.k8s.policy.serviceaccount=sa1
       - k8s:io.kubernetes.pod.namespace=default
-      - k8s:app=cid2
+      - k8s:k8s-app=cep2
     named-ports:
     - name: dns
       port: 53
